--- a/job/templates/job/job_details.html
+++ b/job/templates/job/job_details.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%}
 
-
+{% load bootstrap4 %}
 
 {% block body %}
     <!-- bradcam_area  -->
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="bradcam_text">
-                        <h3>Software Engineer</h3>
+                        <h3>{{job}}</h3>
                     </div>
                 </div>
             </div>
@@ -25,16 +25,16 @@
                         <div class="single_jobs white-bg d-flex justify-content-between">
                             <div class="jobs_left d-flex align-items-center">
                                 <div class="thumb">
-                                    <img src="img/svg_icon/1.svg" alt="">
+                                    <img src="{{job.image.url}}" style="max-height:100px;max-width:100px" alt="">
                                 </div>
                                 <div class="jobs_conetent">
-                                    <a href="#"><h4>Software Engineer</h4></a>
+                                    <a href="#"><h4>{{job}}</h4></a>
                                     <div class="links_locat d-flex align-items-center">
                                         <div class="location">
                                             <p> <i class="fa fa-map-marker"></i> California, USA</p>
                                         </div>
                                         <div class="location">
-                                            <p> <i class="fa fa-clock-o"></i> Part-time</p>
+                                            <p> <i class="fa fa-clock-o"></i> {{job.job_type}}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -49,38 +49,34 @@
                     <div class="descript_wrap white-bg">
                         <div class="single_wrap">
                             <h4>Job description</h4>
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing.</p>
-                            <p>Variations of passages of lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing.</p>
+                            <p>{{job.description}}</p>
                         </div>
-                        <div class="single_wrap">
-                            <h4>Responsibility</h4>
+
+                    </div>
+                    </div>
+                      <div class="job_sumary">
+                        <div class="summery_header">
+                            <h3>Job Summery</h3>
+                        </div>
+                        <div class="job_content">
                             <ul>
-                                <li>The applicants should have experience in the following areas.
-                                </li>
-                                <li>Have sound knowledge of commercial activities.</li>
-                                <li>Leadership, analytical, and problem-solving abilities.</li>
-                                <li>Should have vast knowledge in IAS/ IFRS, Company Act, Income Tax, VAT.</li>
+                                <li>Published on: <span>{{job.puplished_at|date:'d M o'}}</span></li>
+                                <li>Vacancy: <span>{{job.vacancy}} Position</span></li>
+                                <li>Salary: <span>{{job.salary}}</span></li>
+                                <li>Location: <span>California, USA</span></li>
+                                <li>Job Nature: <span>{{job.job_type}}</span></li>
                             </ul>
-                        </div>
-                        <div class="single_wrap">
-                            <h4>Qualifications</h4>
-                            <ul>
-                                <li>The applicants should have experience in the following areas.
-                                </li>
-                                <li>Have sound knowledge of commercial activities.</li>
-                                <li>Leadership, analytical, and problem-solving abilities.</li>
-                                <li>Should have vast knowledge in IAS/ IFRS, Company Act, Income Tax, VAT.</li>
-                            </ul>
-                        </div>
-                        <div class="single_wrap">
-                            <h4>Benefits</h4>
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing.</p>
                         </div>
                     </div>
                     <div class="apply_job_form white-bg">
                         <h4>Apply for the job</h4>
-                        <form action="#">
-                            <div class="row">
+                        <form action="#" method="POST" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                {% bootstrap_form form1 %}
+                                 {% buttons %}
+                                <button class="boxed-btn3 w-100" type="submit">Apply Now</button>
+                                {% endbuttons %}
+                            <!-- <div class="row">
                                 <div class="col-md-6">
                                     <div class="input_field">
                                         <input type="text" placeholder="Your name">
@@ -118,25 +114,12 @@
                                         <button class="boxed-btn3 w-100" type="submit">Apply Now</button>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </form>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="job_sumary">
-                        <div class="summery_header">
-                            <h3>Job Summery</h3>
-                        </div>
-                        <div class="job_content">
-                            <ul>
-                                <li>Published on: <span>12 Nov, 2019</span></li>
-                                <li>Vacancy: <span>2 Position</span></li>
-                                <li>Salary: <span>50k - 120k/y</span></li>
-                                <li>Location: <span>California, USA</span></li>
-                                <li>Job Nature: <span> Full-time</span></li>
-                            </ul>
-                        </div>
-                    </div>
+
                     <div class="share_wrap d-flex">
                         <span>Share at:</span>
                         <ul>
